public/css/styles.css
button, button:hover {
  border: none;
  color: #fff;
  padding: 10px
}

.chat__messages, .chat__sidebar ul {
  list-style-type: none
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
  font-size: .95rem
}

li, ul {
  list-style-position: inside
}

h2 {
  font-weight: 545;
  text-align: center;
  font-size: 1.5rem
}

h3 {
  font-weight: 600;
  text-align: center;
  font-size: 1.5rem
}

button {
  background: #265f82;
  outline: none;
  cursor: pointer;
  -webkit-transition: background .4s ease;
  transition: background .4s ease;
}

button:hover {
  background: #1F4C69
}

button:active {
  transform: translate(2px,2px);
  -webkit-transition: background .4s ease;
  transition: .4s ease;
}

button:disabled {
  cursor: default;
  background: #698ea5
}

.message-form button,
input[type=submit] {
  border-radius: 50%;
  font-size: 1.5em;
  padding: 0;
  outline: none;
  -webkit-transition: background .4s ease;
  transition: background .4s ease;
}

.message-form button:hover,
input[type=submit]:hover {
  background: #1F4C69;
}

.message-form button:active,
input[type=submit]:active {
  background: #1F4C69;
  transform: translate(2px,2px);
  -webkit-transition: background .4s ease;
  transition: .4s ease;

}

.btn-location,
input[type=submit]  {
  margin-right: 10px;

}

.icon-small,
input[type=submit] {
  font-size: 150%;
  text-align: center;
  margin: 10px;
}

.icon-small:disabled {
  cursor: default;
  background: #698ea5;
}

.centered-form {
  display: flex;
  align-items: center;
  height: 100vh;
  width: 100vw;
  justify-content: center;
  background: -moz-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: -webkit-gradient(linear, left top, right bottom, color-stop(0, rgba(49, 84, 129, 1)), color-stop(100%, rgba(39, 107, 130, 1)));
  background: -webkit-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: -o-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: -ms-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: linear-gradient(325deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%)
}

.centered-form__form {
  background: rgba(250, 250, 250, .9);
  border: 1px solid #e1e1e1;
  border-radius: 5px;
  padding: 0 20px;
  margin: 20px;
  width: 230px
}

.form-field {
  margin: 20px 0
}

.form-field>* {
  width: 100%
}

.form-field label {
  display: block;
  margin-bottom: 7px
}

.form-field input, .form-field select {
  border: 1px solid #e1e1e1;
  padding: 10px
}

.chat {
  display: flex
}

.chat__sidebar {
  overflow-y: scroll;
  width: 260px;
  height: 100vh;
  background: -moz-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: -webkit-gradient(linear, left top, right bottom, color-stop(0, rgba(49, 84, 129, 1)), color-stop(100%, rgba(39, 107, 130, 1)));
  background: -webkit-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: -o-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: -ms-linear-gradient(125deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%);
  background: linear-gradient(325deg, rgba(39, 107, 130, 1) 0, rgba(49, 84, 129, 1) 100%)
}

.chat__footer, .chat__sidebar li {
  background: #e6eaee;
  padding: 10px
}

.chat__sidebar h2 {
  color: #6797A7;
  margin: 10px 20px;
  text-align: center;
  border-bottom: 2px solid #6797A7;
}

.chat__sidebar h3 {
  color: #e6eaee;
  margin: 10px 20px;
  text-align: left
}
.chat__sidebar li {
  border: 1px solid #e1e1e1;
  border-radius: 5px;
  margin: 10px
}

.chat__main {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100%
}

.chat__messages {
  flex-grow: 1;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  padding: 10px
}

.chat__footer {
  display: flex;
  flex-shrink: 0
}

.chat__footer form {
  flex-grow: 1;
  display: flex
}

.chat__footer form * {
  margin-right: 10px
}

.chat__footer input {
  border: none;
  padding: 10px;
  flex-grow: 1
}

.message {
  padding: 10px
}

.message__title {
  display: flex;
  margin-bottom: 5px
}

.message__title h4 {
  font-weight: 600;
  margin-right: 10px
}

.message__title span {
  color: #999
}

@media (max-width:600px) {
  * {
    font-size: 1rem
  }

  .chat__sidebar {
    display: none
  }

  .chat__footer {
    flex-direction: column
  }

  .chat__footer form {
    margin-bottom: 10px
  }

  .chat__footer button {
    margin-right: 0
    font-size: 80%;

  }
}

